human-intervention-logs/org.javamoney.moneta:moneta-core:1.4.3/gradle-test/gradle-test-2026-06-06T01-56-59-359784Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.javamoney.moneta:moneta-core:1.4.3
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/src/test/java/org_javamoney_moneta/moneta_core/LoaderConfiguratorTest.java:9: error: cannot find symbol
import org.javamoney.moneta.spi.loader.DefaultLoaderService;
                                      ^
  symbol:   class DefaultLoaderService
  location: package org.javamoney.moneta.spi.loader
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/src/test/java/org_javamoney_moneta/moneta_core/LoaderConfiguratorTest.java:21: error: cannot find symbol
        LoaderService loaderService = new DefaultLoaderService();
                                          ^
  symbol:   class DefaultLoaderService
  location: class LoaderConfiguratorTest
Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/src/test/java/org_javamoney_moneta/moneta_core/DefaultMonetaryAmountsSingletonSpiTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

2 errors
> Task :compileTestJava FAILED


FAILURE: Build failed with an exception.
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/build/reports/problems/problems-report.html


* What went wrong:
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
Execution failed for task ':compileTestJava'.

> Compilation failed; see the compiler output below.
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
  Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/src/test/java/org_javamoney_moneta/moneta_core/DefaultMonetaryAmountsSingletonSpiTest.java uses or overrides a deprecated API.

  Note: Recompile with -Xlint:deprecation for details.
For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/src/test/java/org_javamoney_moneta/moneta_core/LoaderConfiguratorTest.java:9: error: cannot find symbol
14 actionable tasks: 6 executed, 8 up-to-date
  import org.javamoney.moneta.spi.loader.DefaultLoaderService;
                                        ^
    symbol:   class DefaultLoaderService
    location: package org.javamoney.moneta.spi.loader
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/tests/src/org.javamoney.moneta/moneta-core/1.4.3/src/test/java/org_javamoney_moneta/moneta_core/LoaderConfiguratorTest.java:21: error: cannot find symbol
          LoaderService loaderService = new DefaultLoaderService();
                                            ^
    symbol:   class DefaultLoaderService
    location: class LoaderConfiguratorTest
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 6s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7919-2499498d/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.javamoney.moneta:moneta-core:1.4.3 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 8s
9 actionable tasks: 1 executed, 8 up-to-date
